change css to fix on firefox

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -4,7 +4,7 @@
 }
 
 input[type=radio] {
-    visibility: hidden;
+   /* visibility: hidden;*/
     margin-right: 8px;
 	position:relative;
 	left:3px;
